# cmake-project-template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: project.h
src/: main.cpp  project.cpp
tests/: test.cpp
